--- a/Mandatory Assignment 1 of 2/assignment1.tex
+++ b/Mandatory Assignment 1 of 2/assignment1.tex
@@ -210,7 +210,7 @@ Kjøreeksempel gir:
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur1.jpg}
+    \includegraphics[width=0.5\linewidth]{figure1.jpg}
     \caption{Plott av punktsannsynligheten}
     \label{fig:enter-label}
 \end{figure}
@@ -302,7 +302,7 @@ Kjøreeksempel gir:
 \end{FlushLeft}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur2.jpg}
+    \includegraphics[width=0.5\linewidth]{figure2.jpg}
 \end{figure}
 
 \subsection*{f)}
@@ -361,7 +361,7 @@ Kjøreeksempel gir:
 \end{FlushLeft}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur3.jpg}
+    \includegraphics[width=0.5\linewidth]{figure3.jpg}
 \end{figure}
 
 \subsection*{h)}
