Update and rename main.tex to assignment2.tex

--- a/Obligatorisk oppgavesett 2 av 2/assignment2.tex
+++ b/Obligatorisk oppgavesett 2 av 2/assignment2.tex
@@ -249,7 +249,7 @@ Se Python-programmet
 Kjøreeksempel av Python-programmet gir:
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur1.jpg}
+    \includegraphics[width=0.5\linewidth]{figure1.jpg}
 \end{figure}
 \[
 \text{Median} = 506625.06 \quad \text{og} \quad E(X) = 602336.49
@@ -261,7 +261,7 @@ Det er kun små avvik i resultatene.
 Se Python-programmet. Kjøreeksempel gir:
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur2.jpg}
+    \includegraphics[width=0.5\linewidth]{figure2.jpg}
     \caption{Histogram}
     \label{fig:enter-label}
 \end{figure}
@@ -270,7 +270,7 @@ Se Python-programmet. Kjøreeksempel gir:
 Se Python-programmet. Kjøreeksempel gir:
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\linewidth]{figur3.jpg}
+    \includegraphics[width=0.5\linewidth]{figure3.jpg}
     \caption{Histogram og tettheten}
     \label{fig:enter-label}
 \end{figure}
